# null

./: .clang-format  .gitignore  .nvim.lua  CMakeLists.txt  CMakePresets.json  README.md  build.ps1  generate.bat
shaders/: base_shader.slang  triangle.slang  triangle.vert  triangle_1.slang  triangle_2.slang  triangle_3.slang
src/: application.cpp  application.h  camera.cpp  ecs.h  main.cpp  window.cpp  window.h
src/apps/: app_old.cpp  app_old.h  application.cpp  application.h  basic_app.cpp  basic_app.h  basic_app_1.cpp  basic_app_1.h  basic_app_2.cpp  basic_app_2.h  basic_app_3.cpp  basic_app_3.h
src/components/: camera_component.h  components.h  mesh_component.h  orbit_camera_controller_component.h  transform_component.h
src/core/: assert.h  core.h  defines.h  ecs.h  event.h  filesystem.cpp  filesystem.h  logger.cpp  logger.h  math.h  mesh_data.h  platform.cpp  platform.h  types.h  window.cpp  window.h
src/importers/: gltf_importer.cpp  gltf_importer.h
src/platform/: input_types.h  window.cpp  window.h
src/renderer/: buffer.cpp  buffer.h  device.cpp  device.h  geometry_allocator.cpp  geometry_allocator.h  material.h  mesh.cpp  mesh.h  pipeline.cpp  pipeline.h  render_manager.cpp  render_manager.h  render_queue.cpp  render_queue.h  renderer.cpp  renderer.h  scene.cpp  scene.h  swap_chain.cpp  swap_chain.h  utils.h
src/rendering/: vulkan_renderer.cpp  vulkan_renderer.h
src/scene/: camera.cpp  camera.h  camera_system.cpp  camera_system.h
src/tests/: test_runner.cpp  test_runner.h
src/tests/unit/: ecs_test.cpp  misc_test.cpp
src/utils/: logger.cpp  logger.h
